--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "homepage": "https://Muneeba-29.github.io/react-project",
-   "name": "react-vite-tailwind",
+   "name": "react-project",
    "private": true,
    "version": "0.0.0",
    "type": "module",
